--- a/index.css
+++ b/index.css
@@ -6,11 +6,8 @@
 }
 
 .container {
-    /* margin: 50px auto; */
     padding: 20px;
     text-align: center;
-    /* width: 100%; */
-    /* height: 160vh; */
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -92,3 +89,24 @@ p {
     color: #555;
     margin-top: 5px;
 }
+
+
+
+@media screen and (max-width: 600px) {
+    .search-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        flex-wrap: wrap;
+    }
+
+    input {
+        width: 50%; 
+    }
+
+    button {
+        width: 25%; 
+    }
+}
+
